hard-gists/1685139/run.log
=== Docker Run Log for 1685139 ===
Started at: Mi 29. Okt 12:22:30 CET 2025

[2025-10-29 12:22:31] START: Running container for 1685139
[2025-10-29 12:22:31] SUCCESS: Container 071773ddc9a7d817d83c05615ca221826897b9fb5c3a6e2b9ca7df214aa31301 started for 1685139
=== Container logs for 1685139 ===
  File "/snippet.py", line 175
    except WSGIServerException, e:
           ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 1685139 ===
[2025-10-29 12:22:33] INFO: Container 071773ddc9a7d817d83c05615ca221826897b9fb5c3a6e2b9ca7df214aa31301 has stopped
